--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 table{
 border:thick double;
+border-color: black;
 border-spacing: 5 em;
 
+}
+
+th{
+border: 1px solid #000000;
 }
 
 th:nth-child(1){
 font-style: italic;
 font-weight:normal;
 }
+
 
 tbody tr:nth-child(2n){
 background-color:#9999ff;
@@ -41,8 +47,16 @@ td:nth-child(4){
 color:red;
 }
 
+td{
+border: 1px solid #000000;
+}
+
 dt:hover + dd{
 background-color:purple;
+}
+
+form {
+border: 1px solid #000000;
 }
 
 #outer-content{
@@ -63,6 +77,6 @@ margin-right: auto;
 
 img {
 float:left;
-max-height:125px;
-max-width: 100px;
+height:125px;
+width: 100px;
 }
